# llm-council

./: IMPLEMENTATION_SUMMARY.md  PROMPT_TEMPLATES.md  QUICKSTART_TOOLS.md  README.md  TOOLS_DOCUMENTATION.md  pyproject.toml  test_tools.py
backend/: config.py  council.py  main.py  openrouter.py  storage.py  test_tools.py  tools.py
frontend/src/: App.css  App.jsx  api.js  index.css
frontend/src/components/: ChatInterface.css  ChatInterface.jsx  DarkModeToggle.css  DarkModeToggle.jsx  PromptTemplateLibrary.css  PromptTemplateLibrary.jsx  Sidebar.css  Sidebar.jsx  Stage1.css  Stage2.css  Stage3.css
